Added paypal button

--- a/Web/ClientApp/src/index.html
+++ b/Web/ClientApp/src/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Web</title>
-    <base href="/" />
+<head>
+  <meta charset="utf-8" />
+  <title>Web</title>
+  <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://www.paypal.com/sdk/js?client-id=AeWRUnqD6WHs0PxA4AwoTVnO4CCU2O4GR5O6F9o18-6sfcLpuZn3iDW_jA465ZbIazGx03VQqzz6HmpJ&currency=PLN"></script>
 </head>
   <body>
     <app-root>Loading...</app-root>
